add final javadoc